; ModuleID = '/home/carl/AnghaBench/linux/tools/testing/selftests/bpf/progs/extr_test_pkt_md_access.c_process.c'
source_filename = "/home/carl/AnghaBench/linux/tools/testing/selftests/bpf/progs/extr_test_pkt_md_access.c_process.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.__sk_buff = type { i32 }

@__u8 = common dso_local global i32 0, align 4
@len = common dso_local global i32 0, align 4
@__u16 = common dso_local global i32 0, align 4
@__u32 = common dso_local global i32 0, align 4
@protocol = common dso_local global i32 0, align 4
@hash = common dso_local global i32 0, align 4
@TC_ACT_OK = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @process(%struct.__sk_buff* %0) #0 {
  %2 = alloca %struct.__sk_buff*, align 8
  store %struct.__sk_buff* %0, %struct.__sk_buff** %2, align 8
  %3 = load i32, i32* @__u8, align 4
  %4 = load i32, i32* @len, align 4
  %5 = call i32 @TEST_FIELD(i32 %3, i32 %4, i32 255)
  %6 = load i32, i32* @__u16, align 4
  %7 = load i32, i32* @len, align 4
  %8 = call i32 @TEST_FIELD(i32 %6, i32 %7, i32 65535)
  %9 = load i32, i32* @__u32, align 4
  %10 = load i32, i32* @len, align 4
  %11 = call i32 @TEST_FIELD(i32 %9, i32 %10, i32 -1)
  %12 = load i32, i32* @__u16, align 4
  %13 = load i32, i32* @protocol, align 4
  %14 = call i32 @TEST_FIELD(i32 %12, i32 %13, i32 65535)
  %15 = load i32, i32* @__u32, align 4
  %16 = load i32, i32* @protocol, align 4
  %17 = call i32 @TEST_FIELD(i32 %15, i32 %16, i32 -1)
  %18 = load i32, i32* @__u8, align 4
  %19 = load i32, i32* @hash, align 4
  %20 = call i32 @TEST_FIELD(i32 %18, i32 %19, i32 255)
  %21 = load i32, i32* @__u16, align 4
  %22 = load i32, i32* @hash, align 4
  %23 = call i32 @TEST_FIELD(i32 %21, i32 %22, i32 65535)
  %24 = load i32, i32* @__u32, align 4
  %25 = load i32, i32* @hash, align 4
  %26 = call i32 @TEST_FIELD(i32 %24, i32 %25, i32 -1)
  %27 = load i32, i32* @TC_ACT_OK, align 4
  ret i32 %27
}

declare dso_local i32 @TEST_FIELD(i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
